# Typetrainer

Typetrainer/typetrainer-main/: README.md  build_and_run.sh  cleanup.sh  sprint-description-copy.md  structure.md
Typetrainer/typetrainer-main/src/: CMakeLists.txt  cli.cpp  cli.h  database.cpp  database.h  engine.cpp  engine.h  menu_choice.h  player.cpp  player.h  statistics.csv  tt.cpp
Typetrainer/typetrainer-main/tools/: text_generator.cpp  text_splitter.cpp
Typetrainer/typetrainer-main/tools/source_texts/: level1.txt  level2.txt  level3.txt
